refactor(views): remove AccessDeniedErrorView and cleanup views
- delete AccessDeniedErrorView to simplify error handling
- make some service fields transient to avoid serialization issues
- use local variables instead of fields for UI components in DeckCreateView and AdminNewsView
- improve AdminUsersView with separate methods for buttons and dialogs
- add checks to prevent deleting current admin or last admin user
- remove decorative astronaut element from LandingView
- fix minor style and method call adjustments
- clean up ErrorView to use transient environment and safer query param access